syntax = "proto3";

package cluster;

option go_package = "/Internal/cluster/proto";

service NodeService {
    rpc RequestVote (VoteRequest) returns (VoteResponse);
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}

message VoteRequest {
    int32 node_id = 1;
}

message VoteResponse {
    bool granted = 1;
}

message HeartbeatRequest {
    int32 node_id = 1;
    string port = 2;
}

message HeartbeatResponse {
    bool success = 1;
    map<int32, string> nodes = 2;
}